welcome.lessons.welcome.bat.bool1.NearHundred.scala.error
nearHundred:2: error: type mismatch;
 found   : Int
 required: Boolean
  return (Math.abs(n-100) <= 10 || Math.abs(n-200))
                                           ^